--- a/src/app/shared/layout/header/top-header/top-header.component.html
+++ b/src/app/shared/layout/header/top-header/top-header.component.html
@@ -1,91 +1,86 @@
 <mat-toolbar color="background-white-color">
-    <mat-toolbar-row>
-        <button mat-icon-button (click)="onToggleSidenav()" fxShow="true" fxHide.gt-sm>
-            <mat-icon>menu</mat-icon>
+  <mat-toolbar-row>
+    <button mat-icon-button (click)="onToggleSidenav()" fxShow="true" fxHide.gt-sm>
+      <mat-icon>menu</mat-icon>
+    </button>
+    <span><img width="200" src="../../../../assets/images/loginLogo.png" alt="logo"/></span>
+    <span class="menu-spacer"></span>
+
+    <button class="pull-right p-t-10 notification-bell-icon" mat-button [matMenuTriggerFor]="notifs">
+      <a href="javascript:void(0)" (click)="openDiv()">
+        <mat-icon
+          [ngClass]="{'bell-icon-active': notifClicked === true, 'bell-icon': notifClicked === false}"
+          matBadge="{{ unreadnotificationLength }}"
+          matBadgeSize="small"
+          matBadge="15"
+          matBadgeColor="warn"
+        >
+          notifications</mat-icon
+        >
+      </a>
+    </button>
+
+    <div fxShow="true" fxHide.lt-md>
+      <button mat-button [matMenuTriggerFor]="logIn">
+        <img class="img-circle" height="36" width="38" src="../../../../assets/images/user-image.jpg" alt="Test" />
+        Test
+        <mat-icon aria-hidden="false" aria-label="Example arrow_drop_down icon">arrow_drop_down</mat-icon>
+      </button>
+      <mat-menu #logIn="matMenu">
+        <button mat-menu-item class="background-white-color">
+          My Account
         </button>
-        <span><img width="200" src="../../../../assets/images/loginLogo.png" alt="logo" /></span>
-        <span class="menu-spacer"></span>
-
-        <button class="pull-right p-t-10 notification-bell-icon" mat-button [matMenuTriggerFor]="notifs">
-
-            <a href="javascript:void(0)" (click)="openDiv()">
-                <mat-icon [ngClass]="{'bell-icon-active': notifClicked === true,'bell-icon':notifClicked === false }"
-                    matBadge="{{unreadnotificationLength}}" matBadgeSize="small" matBadge="15" matBadgeColor="warn">
-                    notifications</mat-icon>
-            </a>
-        </button>
-
-
-        <div fxShow="true" fxHide.lt-md>
-
-            <button mat-button [matMenuTriggerFor]="logIn">
-                <img class="img-circle" height="36" width="38" src="../../../../assets/images/user-image.jpg"
-                    alt="Test" />
-                Test
-                <mat-icon aria-hidden="false" aria-label="Example arrow_drop_down icon">arrow_drop_down</mat-icon>
-            </button>
-            <mat-menu #logIn="matMenu">
-                <button mat-menu-item class="background-white-color">
-                    My Account
-                </button>
-                <button mat-menu-item class="background-white-color" (click)="logout()"
-                    routerLinkActive="router-link-active">LogOut</button>
-            </mat-menu>
-        </div>
-    </mat-toolbar-row>
+        <button mat-menu-item class="background-white-color" (click)="logout()" routerLinkActive="router-link-active">LogOut</button>
+      </mat-menu>
+    </div>
+  </mat-toolbar-row>
 </mat-toolbar>
 
-    <mat-menu #notifs="matMenu" class="header-bell-menu">
-            <div class="main-div-bell" mat-menu-item [disableRipple]="true">
-                  <div id="notifications">
-                <h3>Notifications</h3>
-                <div class="body-of-notification">
-
-                    <ng-container *ngIf="unreadnotification && unreadnotification.length>0">
-                        <div class="read-unread-heading p-l-10 p-r-10  cursor-pointer">
-                            <span>
-                                Recent
-                            </span>
-                            <span class="pull-right ">
-                                You have {{unreadnotification.length}} unread notifications
-                            </span>
-                        </div>
-                        <ng-container *ngFor="let notification of unreadnotification">
-                            <div (click)="routeTo(notification.resourceUrl)" class="p-l-10 p-r-10 unread-background  cursor-pointer">
-                                <span *ngIf="notification.notificationText" class="font-size-12">
-                                    {{notification.notificationText}}
-                                </span>
-                                <span *ngIf="notification.created_at" class="time-notification">
-                                    <br>
-                                    {{notification.created_at |  date:'medium'}}
-                                </span>
-                            </div>
-                        </ng-container>
-                    </ng-container>
-
-                    <ng-container *ngIf="readnotification && readnotification.length>0">
-                        <div class="read-unread-heading">
-                            <span class="p-5">
-                                Earlier
-                            </span>
-
-                        </div>
-                        <ng-container *ngFor="let notification of readnotification">
-                            <div (click)="routeTo(notification.resourceUrl)" class="read-background cursor-pointer">
-                                <span *ngIf="notification.notificationText" class="font-size-12">
-                                    {{notification.notificationText}}
-                                </span>
-                                <span *ngIf="notification.created_at" class="time-notification">
-                                    <br>
-                                    {{notification.created_at | date:'medium'}}
-                                </span>
-                            </div>
-                        </ng-container>
-                    </ng-container>
-
-
-                </div>
-                <!-- <div class="seeAll"><a href="#">View All</a></div> -->
+<mat-menu #notifs="matMenu" class="header-bell-menu">
+  <div class="main-div-bell" mat-menu-item [disableRipple]="true">
+    <div id="notifications">
+      <h3>Notifications</h3>
+      <div class="body-of-notification">
+        <ng-container *ngIf="unreadnotification && unreadnotification.length > 0">
+          <div class="read-unread-heading p-l-10 p-r-10  cursor-pointer">
+            <span>
+              Recent
+            </span>
+            <span class="pull-right "> You have {{ unreadnotification.length }} unread notifications </span>
+          </div>
+          <ng-container *ngFor="let notification of unreadnotification">
+            <div (click)="routeTo(notification.resourceUrl)" class="p-l-10 p-r-10 unread-background  cursor-pointer">
+              <span *ngIf="notification.notificationText" class="font-size-12">
+                {{ notification.notificationText }}
+              </span>
+              <span *ngIf="notification.created_at" class="time-notification">
+                <br />
+                {{ notification.created_at | date: "medium" }}
+              </span>
             </div>
+          </ng-container>
+        </ng-container>
+
+        <ng-container *ngIf="readnotification && readnotification.length > 0">
+          <div class="read-unread-heading">
+            <span class="p-5">
+              Earlier
+            </span>
+          </div>
+          <ng-container *ngFor="let notification of readnotification">
+            <div (click)="routeTo(notification.resourceUrl)" class="read-background cursor-pointer">
+              <span *ngIf="notification.notificationText" class="font-size-12">
+                {{ notification.notificationText }}
+              </span>
+              <span *ngIf="notification.created_at" class="time-notification">
+                <br />
+                {{ notification.created_at | date: "medium" }}
+              </span>
             </div>
-    </mat-menu> 
+          </ng-container>
+        </ng-container>
+      </div>
+      <!-- <div class="seeAll"><a href="#">View All</a></div> -->
+    </div>
+  </div>
+</mat-menu>
