--- a/src/app/features/bom/bom.component.html
+++ b/src/app/features/bom/bom.component.html
@@ -1,81 +1,98 @@
 <div class="page-start-point ">
   <div class="p-l-20 p-r-20 p-b-20 min-height">
-    <card-layout *ngIf="product" (onEdit)="editProject($event)" (onDelete)="deleteProject($event)"
-      [projectDetails]="product" [disableEditDelete]="true"></card-layout>
-    <div class="p-t-10" *ngIf="!showTable">
+    <card-layout *ngIf="product" (onEdit)="editProject($event)" (onDelete)="deleteProject($event)" [projectDetails]="product" [disableEditDelete]="true"></card-layout>
+    <div class="p-t-10">
       <mat-card class="parent">
-        <div class="row">
-          <div class="col-xs-6 text-left">
-            <p>Please select categories to add materials in Bill of Materials</p>
-          </div>
-          <div class="col-xs-6 text-right d-flex justify-content-end" appDnd>
-            <div class="mr-3">
-              <span class="cursor-pointer download-bom-template">
-                <img src="assets/images/download.png" alt="download" class="img-fluid mr-2">
-                <a (click)="downloadExcel('assets/images/Master_data.xlsx')"> Download BOM Template</a></span>
+        <form [formGroup]="form">
+          <div class="row">
+            <div class="col-xs-6 text-right">
+              <mat-form-field class="border-select p-t-0">
+                <mat-label *ngIf="!selectedCategory.length">Select Category</mat-label>
+                <mat-select formControlName="selectedTrades" multiple>
+                  <div class="display-flex">
+                    <input class="p-l-10 p-b-5" matInput type="search" placeholder="Search Category Name" [(ngModel)]="searchText" [ngModelOptions]="{standalone: true}" />
+                    <button mat-button matSuffix mat-icon-button>
+                      <mat-icon>search</mat-icon>
+                    </button>
+                  </div>
+                  <mat-select-trigger>
+                    <mat-label>Select Category</mat-label>
+                  </mat-select-trigger>
+                  <mat-option *ngFor="let category of fullCategoryList | SearchPipe: searchText" [value]="category" selected="category.checked" (click)="choosenProject()"
+                    >{{ category.materialGroup }}
+                  </mat-option>
+                </mat-select>
+              </mat-form-field>
+              <!-- <p>Please select categories to add materials in Bill of Materials</p> -->
             </div>
-            <div>
-              <input class="fileupload cursor-pointer width-200"  type="file" accept=".xlsx" #fileDropRef id="fileDropRef" style="display: none;" multiple
-                (change)="uploadExcel($event.target.files)" />
-              <label class="cursor-pointer upload-template"> <img src="assets/images/upload.png" alt="upload" class="img-fluid mr-2 w-30"> 
-             <span class="cursor-pointer">Upload BOM Template</span> 
-              </label>
+            <div class="col-xs-6 text-right d-flex justify-content-end" appDnd>
+              <div class="mr-3">
+                <span class="cursor-pointer download-bom-template">
+                  <img src="assets/images/download.png" alt="download" class="img-fluid mr-2" />
+                  <a (click)="downloadExcel('assets/images/Master_data.xlsx')"> Download BOM Template</a></span
+                >
+              </div>
+              <div class="mr-3">
+                <input
+                  class="fileupload cursor-pointer width-200"
+                  type="file"
+                  accept=".xlsx"
+                  #fileDropRef
+                  id="fileDropRef"
+                  style="display: none;"
+                  multiple
+                  (change)="uploadExcel($event.target.files)"
+                />
+                <label class="cursor-pointer upload-template">
+                  <img src="assets/images/upload.png" alt="upload" class="img-fluid mr-2 w-30" />
+                  <span class="cursor-pointer">Upload BOM Template</span>
+                </label>
+              </div>
+              <div>
+                <button
+                  mat-raised-button
+                  class="main-background-color main-button color-white pull-right save-material-button"
+                  (click)="saveCategory()"
+                  [disabled]="!isAllFormsValid"
+                >
+                  Add to BOM
+                </button>
+              </div>
             </div>
           </div>
-        </div>
+        </form>
         <div class="row display-flex m-b-20">
           <div class="m-b-10 m-r-10" *ngFor="let category of selectedCategory">
-            <mat-card class="p-l-10 p-r-0 p-t-0 p-b-0 font-size14">{{ category.materialGroup }}
+            <mat-card class="p-l-10 p-r-0 p-t-0 p-b-0 font-size14"
+              >{{ category.materialGroup }}
               <button mat-button matSuffix mat-icon-button>
                 <mat-icon class="font-size14" (click)="clearSelectedCategory(category)">clear</mat-icon>
               </button>
             </mat-card>
           </div>
         </div>
-        <div class="col-sm-12">
-          <mat-form-field class="border-select center-element material-select-options">
-            <mat-label *ngIf="!selectedCategory.length">Select Category</mat-label>
-            <mat-select [formControl]="categories" [(ngModel)]="selectedCategory" multiple floatlLabel="never">
-              <div class="display-flex">
-                <input class="p-l-10 p-b-5" matInput type="search" placeholder="Search Category Name" [(ngModel)]="searchText" />
-                <button mat-button matSuffix mat-icon-button>
-                  <mat-icon>search</mat-icon>
-                </button>
-              </div>
-              <mat-select-trigger>
-                <mat-label>Select Category</mat-label>
-              </mat-select-trigger>
-              <mat-option *ngFor="let category of fullCategoryList | SearchPipe: searchText" [value]="category">{{ category.materialGroup }} </mat-option>
-            </mat-select>
-          </mat-form-field>
-        </div>
+        <div class="col-sm-12"></div>
         <div class="col-sm-12 text-right m-t-40">
           <button *ngIf="getSelectedCategoriesLength()" mat-raised-button class="main-background-color main-button color-white" (click)="finalisedCategory()">
             Next
           </button>
         </div>
-      </mat-card>
-    </div>
-    <div *ngIf="showTable">
-      <div class="row p-t-10 p-b-10">
-        <div class="col-sm-8  border-input">
-          
-          <!-- <mat-form-field class="input-search-padding-zero">
+        <div *ngIf="showTable">
+          <div class="row p-t-10 p-b-10">
+            <div class="col-sm-8  border-input">
+              <!-- <mat-form-field class="input-search-padding-zero">
             <input matInput placeholder="Search Material" type="search" [(ngModel)]="searchMaterial" />
             <button mat-button matSuffix mat-icon-button>
               <mat-icon>search</mat-icon>
             </button>
           </mat-form-field> -->
+            </div>
+          </div>
+          <div *ngFor="let data of categoryData | SearchPipe: searchMaterial:'data'">
+            <app-bom-preview #preview [selectedCategory]="data" (searchData)="searchData($event)" (inputEntered)="checkValidations($event)"></app-bom-preview>
+          </div>
         </div>
-        <div class="col-sm-4">
-          <button mat-raised-button class="main-background-color main-button color-white pull-right save-material-button" (click)="saveCategory()" [disabled]="!isAllFormsValid">
-            Add to BOM
-          </button>
-        </div>
-      </div>
-      <div *ngFor="let data of categoryData  | SearchPipe: searchMaterial:'data'">
-        <app-bom-preview #preview [selectedCategory]="data" (searchData)="searchData($event)" (inputEntered)="checkValidations($event)"></app-bom-preview>
-      </div>
+      </mat-card>
     </div>
   </div>
 </div>
