Address popUp Redesigned and Supplier Added in Product page Signed-off-by: subham.saha@buildsupply.com <subham.saha@buildsupply.com>

--- a/src/app/features/po/initiate-po/po-supplier/po-supplier.component.html
+++ b/src/app/features/po/initiate-po/po-supplier/po-supplier.component.html
@@ -17,6 +17,16 @@
           </button>
         </mat-form-field> -->
       </span>
+        <span class="p-r-5">
+      <span class=" m-b-5 m-r-10 m-l-15 font-bold color-main cursor-pointer" (click)="openSupplierDialog()">
+        <span class="font-size20">
+          +
+        </span>
+        <span>
+          Supplier
+        </span>
+      </span>
+    </span>
       <span>
         <button [disabled]="!form.valid" mat-raised-button matStepperNext class="main-background-color main-button color-white">
           Next
