--- a/src/app/shared/dialogs/add-address-po/add-addressPo.html
+++ b/src/app/shared/dialogs/add-address-po/add-addressPo.html
@@ -1,4 +1,16 @@
-<h1 mat-dialog-title>Select Address</h1>
+<div class="header-add-edit-dialog p-r-0">
+  <div class="row width-100">
+      <div class="col-sm-10">
+     <h1 mat-dialog-title>Select Address</h1>
+  </div>
+    <div class="col-sm-2">
+        <button type="button" class="close pull-right p-t-5" (click)="close()" aria-label="Close">
+        <span aria-hidden="true">×</span>
+      </button>
+    </div>
+  </div>
+</div>
+
 <!-- class="mat-tab-add-address-modal-po" -->
 <div mat-dialog-content class="mat-tab-add-address-modal-po">
     <mat-tab-group class="overflow-remove">
@@ -16,12 +28,13 @@
                                         <span *ngIf="add.city">, {{add.city}}</span>
                                         <span *ngIf="add.state">, {{add.state}}</span>
                                          <span *ngIf="add.pinCode">, {{add.pinCode}}</span>
+                                         <span *ngIf="add.gstNo"> | {{add.gstNo}}</span>
                                     </mat-radio-button>
                                 </div>
                             </mat-radio-group>
                         </div>
                     </div>
-                    <div mat-dialog-actions class="pull-right">
+                    <div  class="pull-right p-t-5">
                         <button mat-raised-button class="main-background-color main-button color-white m-b-5"
                             cdkFocusInitial (click)="onselectAddress()">
                             Save
@@ -38,58 +51,67 @@
 
         <mat-tab label="Add Address">
             <form [formGroup]="newAddressForm">
-                <div class="container">
+                <div class="add-address-dialog-div-main">
                     <div class="row">
-                        <div class="col-md-6 ">
-                            <div class="row border-input">
-                                <mat-form-field class="col-xs-12 p-r-150 p-l-150">
+                        <div class="col-xs-6">
+                             <div class="row border-input">
+                                <mat-form-field class="col-xs-12 ">
                                     <input matInput type="text" placeholder="Address Line 1"
                                         formControlName="addressLine1" />
                                 </mat-form-field>
-                            </div>
-
-                            <div class="row border-input">
-                                <mat-form-field class="col-xs-12 p-r-150 p-l-150">
-                                    <input matInput type="string" (input)="getPincode($event)" placeholder="Pincode" formControlName="pinCode" />
-                                </mat-form-field>
-                            </div>
-
-                            <div class="row border-input">
-                                <mat-form-field class="col-xs-12 p-r-150 p-l-150">
-                                    <!-- <mat-label>City</mat-label> -->
-                                    <input matInput type="string" formControlName="city" placeholder="city" />
-                                    <!-- <mat-select formControlName=city>
-                                        <mat-option *ngFor="let city of cities" [value]="city.value">
-                                            {{city.viewValue}}
-                                        </mat-option>
-                                    </mat-select> -->
-                                </mat-form-field>
+                                  <small *ngIf="newAddressForm.controls['addressLine1'].hasError('required') && newAddressForm.controls['addressLine1'].touched" class="form-error-msg p-l-15"> Address Line1 is required </small>
                             </div>
                         </div>
-
-                        <div class="col-md-6">
-                            <div class="row border-input">
-                                <mat-form-field class="col-xs-12 p-r-300">
+                        <div class="col-xs-6">
+                              <div class="row border-input p-t-0">
+                                <mat-form-field class="col-xs-12">
                                     <input matInput type="text" placeholder="Address Line 2"
                                         formControlName="addressLine2" />
                                 </mat-form-field>
                             </div>
-                            
-                            <div class="row border-input">
-                                <mat-form-field class="col-xs-12 p-r-300">
-                                    <input matInput type="string" formControlName="state" placeholder="state" />
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-6">
+                               <div class="row border-input p-t-0">
+                                <mat-form-field class="col-xs-12 ">
+                                    <input matInput type="string" (input)="getPincode($event)" placeholder="Pincode" formControlName="pinCode" />
+                                </mat-form-field>
+                                 <small *ngIf="newAddressForm.controls['pinCode'].hasError('required') && newAddressForm.controls['pinCode'].touched" class="form-error-msg p-l-15"> Pincode is required </small>
+                                <small *ngIf="newAddressForm.controls['pinCode'].hasError('pattern') && newAddressForm.controls['pinCode'].touched"
+                                    class="form-error-msg p-l-15"> Enter Valid Pincode</small>
+                            </div>
+                        </div>
+                        <div class="col-xs-6">
+                              <div class="row border-input p-t-0">
+                                <mat-form-field class="col-xs-12">
+                                    <input matInput type="string" formControlName="state" placeholder="State" />
                                     <!-- <input matInput type="text" placeholder="State" formControlName="state" /> -->
                                 </mat-form-field>
                             </div>
-                            <div class="row border-input">
-                                <mat-form-field class="col-xs-12 p-r-300">
-                                    <input matInput type="text" placeholder="Gst No" formControlName="gstNo" />
+                        </div>
+                     </div>
+                    <div class="row">
+                        <div class="col-xs-6">
+                            <div class="row border-input p-t-0">
+                                <mat-form-field class="col-xs-12 ">
+                                    <input matInput type="string" formControlName="city" placeholder="City" />
                                 </mat-form-field>
+                            </div>
+                        </div>
+                        <div class="col-xs-6">
+                               <div class="row border-input p-t-0">
+                                <mat-form-field class="col-xs-12">
+                                    <input matInput type="text" placeholder="GSTIN" formControlName="gstNo" />
+                                </mat-form-field>
+                                  <small *ngIf="newAddressForm.controls['gstNo'].hasError('required') && newAddressForm.controls['gstNo'].touched" class="form-error-msg p-l-15"> GSTIN is required </small>
+                                <small *ngIf="newAddressForm.controls['gstNo'].hasError('pattern') && newAddressForm.controls['gstNo'].touched"
+                                    class="form-error-msg p-l-15"> Enter Valid GSTIN</small>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div mat-dialog-actions class="pull-right p-t-5">
+                <div class="pull-right">
                     <button mat-raised-button class="main-background-color main-button color-white m-b-5"
                         cdkFocusInitial (click)="onAddAddress()">
                         Add
@@ -98,15 +120,4 @@
             </form>
         </mat-tab>
     </mat-tab-group>
-</div>
-
-<div mat-dialog-actions class="pull-right">
-    <!-- <button mat-raised-button class="main-background-color main-button color-white m-b-5" cdkFocusInitial
-        (click)="onselectAddress()">
-        Save
-    </button> -->
-    <!-- <button mat-raised-button class="main-background-color main-button color-white m-b-5" cdkFocusInitial
-        (click)="onAddAddress()">
-        Add
-    </button> -->
 </div>
