expanded grn Signed-off-by: subham.saha@buildsupply.com <subham.saha@buildsupply.com>

--- a/src/app/features/po/view-grn/view-grn.component.html
+++ b/src/app/features/po/view-grn/view-grn.component.html
@@ -16,7 +16,7 @@
 
     <mat-accordion>
       <div *ngIf="grnHeaders">
-        <mat-expansion-panel class="myPanel" *ngFor="let grnHeader of grnHeaders">
+        <mat-expansion-panel class="myPanel" *ngFor="let grnHeader of grnHeaders" [expanded]="true">
           <mat-expansion-panel-header>
             <mat-panel-title>
               <div class="row width100Percent">
