Fix Signed-off-by: subham.saha@buildsupply.com <subham.saha@buildsupply.com>

--- a/src/app/features/rfq-supplier-template/rfq-supplier-detail/rfq-supplier-detail.component.html
+++ b/src/app/features/rfq-supplier-template/rfq-supplier-detail/rfq-supplier-detail.component.html
@@ -42,10 +42,10 @@
         <span>
           Payment Details :
         </span>
-        <span *ngIf="rfqSupplierDetailList.terms.termsDesc" class="p-l-20">
+        <span *ngIf="rfqSupplierDetailList && rfqSupplierDetailList.terms && rfqSupplierDetailList.terms.termsDesc" class="p-l-20">
             {{rfqSupplierDetailList.terms.termsDesc}}
         </span>
-         <span *ngIf="!rfqSupplierDetailList.terms.termsDesc" class="p-l-20">
+         <span *ngIf="!(rfqSupplierDetailList && rfqSupplierDetailList.terms && rfqSupplierDetailList.terms.termsDesc)" class="p-l-20">
            -
         </span>
       </div>
