--- a/src/app/shared/components/project-item/project-item.component.html
+++ b/src/app/shared/components/project-item/project-item.component.html
@@ -2,7 +2,8 @@
   <mat-card-content class="mat-card-content">
     <div class="row">
       <div class="col-md-2 col-xs-12" style="height: 150px;">
-        <img class="radius-10 project-item-image" [src]="projectDetails.imageUrl || '../../../../assets/images/project-default-image.png'" alt="project image" />
+        <img class="radius-10 project-item-image" *ngIf="projectDetails.imageUrl" [src]="projectDetails.imageUrl" alt="project image" />
+         <img class="radius-10 project-item-image"  *ngIf="!projectDetails.imageUrl" [src]="'../../../../assets/images/project-default-image.png'" alt="project image" />
       </div>
 
       <div class="col-md-10 col-xs-12 card-project-dialog">
@@ -151,7 +152,7 @@
         </div>
         <div class="row m-t-10">
           <div class="col-xs-6 text-left">
-            <div class="font-size12 color-text-card">Created : {{ projectDetails.createdAt | date: "fullDate" }} By {{ projectDetails.createdBy }} (Site Engineer)</div>
+            <div class="font-size12 color-text-card">Created : {{ projectDetails.createdAt | date: "fullDate" }} By {{ projectDetails.createdBy }}</div>
           </div>
           <div class="col-xs-6 text-right">
             <button
