--- a/src/app/shared/dialogs/add-address-po/add-addressPo.html
+++ b/src/app/shared/dialogs/add-address-po/add-addressPo.html
@@ -78,8 +78,11 @@
                                     <input matInput type="string" (input)="getPincode($event)" placeholder="Pincode" formControlName="pinCode" />
                                 </mat-form-field>
                                  <small *ngIf="newAddressForm.controls['pinCode'].hasError('required') && newAddressForm.controls['pinCode'].touched" class="form-error-msg p-l-15"> Pincode is required </small>
-                                <small *ngIf="newAddressForm.controls['pinCode'].hasError('pattern') && newAddressForm.controls['pinCode'].touched"
-                                    class="form-error-msg p-l-15"> Enter Valid Pincode</small>
+                                <!-- <small *ngIf="newAddressForm.controls['pinCode'].hasError('pattern') && newAddressForm.controls['pinCode'].touched"
+                                    class="form-error-msg p-l-15"> Enter Valid Pincode</small> -->
+                                <small *ngIf="newAddressForm.controls['pinCode'].touched && (!validPincode) && (pincodeLength>0)" class="error-msg p-l-15">
+                                    Enter Valid Pincode
+                                </small> 
                             </div>
                         </div>
                         <div class="col-xs-6">
@@ -112,7 +115,7 @@
                     </div>
                 </div>
                 <div class="pull-right">
-                    <button mat-raised-button class="main-background-color main-button color-white m-b-5"
+                    <button mat-raised-button [disabled]="!newAddressForm.valid || (!validPincode)" class="main-background-color main-button color-white m-b-5"
                         cdkFocusInitial (click)="onAddAddress()">
                         Add
                     </button>
